# EchoAtlasDeep

./: .gitignore  .rmtide.toml  Cargo.toml  Makefile  PLAN.md  README.md  UPGRADE_PLAN.md  cargo_found.txt  find_cargo.bat  install.ps1  make_shortcut.ps1  run.bat  run.ps1  run.sh
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: release.yml
completions/: _rmtide  rmtide.bash
crates/ai/: Cargo.toml
crates/ai/src/: agent.rs  agent_memory.rs  approval.rs  backend.rs  cache.rs  chat.rs  claude.rs  context.rs  fallback.rs  gemini.rs  ghost.rs  keyring.rs  lib.rs  ollama.rs  openai.rs  prompt_library.rs  registry.rs  spend.rs
crates/core/: Cargo.toml
crates/core/src/: bus.rs  config_watcher.rs  error.rs  event.rs  ids.rs  lib.rs
crates/dap/: Cargo.toml
crates/dap/src/: breakpoints.rs  client.rs  lib.rs  protocol.rs
crates/editor/: Cargo.toml
crates/editor/src/: buffer.rs  cursor.rs  fold.rs  lib.rs  modal.rs  registers.rs  registry.rs  search.rs  undo.rs  view.rs
crates/git/: Cargo.toml
crates/git/src/: blame.rs  branch.rs  diff.rs  lib.rs  repo.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: client.rs  diagnostics.rs  jsonrpc.rs  lib.rs  manager.rs  types.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: bridge.rs  lib.rs  prompts.rs  protocol.rs  resources.rs  server.rs  transport.rs
crates/mcp/src/tools/: editor.rs  filesystem.rs  mod.rs  terminal.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: api.rs  lib.rs  lua.rs  registry.rs  wasm.rs
crates/runner/: Cargo.toml
crates/runner/src/: db_client.rs  env_manager.rs  http_client.rs  lib.rs  live_server.rs  process_manager.rs  task.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: lib.rs  screen.rs  session.rs
crates/terminal/src/pty/: mod.rs  unix.rs  windows.rs
crates/terminal/src/vt/: attrs.rs  color.rs  mod.rs  parser.rs  processor.rs
crates/ui/: Cargo.toml
crates/ui/src/: highlight.rs  input.rs  layout.rs  lib.rs  pane.rs  render.rs  theme.rs
crates/ui/src/widgets/: agent_panel.rs  analytics_panel.rs  approval_modal.rs  bookmarks.rs  border.rs  chat_pane.rs  clipboard_ring.rs  cmdline.rs  collab_panel.rs  command_palette.rs  commit_composer.rs  completion_popup.rs  context_picker.rs  dap_panel.rs  db_panel.rs  deploy_panel.rs  diagnostics_panel.rs  diff_review.rs  editor_pane.rs  env_panel.rs  file_picker.rs  file_tree.rs  find_replace.rs  git_blame.rs  git_branch.rs  git_diff_gutter.rs  git_panel.rs  hover_popup.rs  http_panel.rs  keymap_editor.rs  keyring_panel.rs  log_viewer.rs  macro_panel.rs  minimap.rs  mod.rs  model_matrix.rs  model_picker.rs  notebook.rs  pair_programmer.rs  plugin_marketplace.rs  (+14 more)
