[package]
name = "git"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
git2 = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
notify = { workspace = true }
