[package]
name = "mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
