[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

[features]
default = []
wasm = ["wasmtime"]
lua = ["mlua"]

[dependencies]
core = { path = "../core" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }

# Optional heavy runtimes — enabled via features
wasmtime = { version = "18", optional = true, default-features = false, features = ["cranelift", "runtime", "wat"] }
mlua = { version = "0.9", optional = true, features = ["lua54", "vendored", "async", "send"] }
