[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
parking_lot = { workspace = true }
notify = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
