[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
terminal = { path = "../terminal" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
editor = { path = "../editor" }
regex = { workspace = true }
fuzzy-matcher = { workspace = true }
walkdir = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-json = "0.20"
ai = { path = "../ai" }
git = { path = "../git" }
dap = { path = "../dap" }
runner = { path = "../runner" }
toml = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
